[gd_scene load_steps=20 format=3 uid="uid://doe62v2nqwhgb"]

[ext_resource type="Script" path="res://scripts/mermaid.gd" id="1_0500t"]
[ext_resource type="Texture2D" uid="uid://cga2rcm6jgir6" path="res://assets/sprites/enemies_placeholder/5/Attack.png" id="1_c2jka"]
[ext_resource type="Texture2D" uid="uid://cjwa7linel78v" path="res://assets/sprites/enemies_placeholder/5/Idle.png" id="1_xlt0t"]
[ext_resource type="Texture2D" uid="uid://dwfq0wwi05nyj" path="res://assets/sprites/light.png" id="3_1tb4y"]
[ext_resource type="AudioStream" uid="uid://bsbq4acam6ysm" path="res://assets/sounds/Eel/lurking-horror-monster-143278.mp3" id="5_x3b75"]
[ext_resource type="AudioStream" uid="uid://buc5beekv6bmm" path="res://assets/sounds/Eel/jumpscare_sound-39630.mp3" id="6_lo5tt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jpoj1"]
atlas = ExtResource("1_c2jka")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sabss"]
atlas = ExtResource("1_c2jka")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3ir1"]
atlas = ExtResource("1_c2jka")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7on7"]
atlas = ExtResource("1_c2jka")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3ank"]
atlas = ExtResource("1_c2jka")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh35s"]
atlas = ExtResource("1_c2jka")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpwb2"]
atlas = ExtResource("1_xlt0t")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmcwy"]
atlas = ExtResource("1_xlt0t")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o816i"]
atlas = ExtResource("1_xlt0t")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxdo5"]
atlas = ExtResource("1_xlt0t")
region = Rect2(96, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_mbt4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpoj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sabss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3ir1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7on7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3ank")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh35s")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpwb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmcwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o816i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxdo5")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vq5io"]
radius = 6.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_55lql"]
radius = 108.167

[node name="Mermaid" type="CharacterBody2D"]
script = ExtResource("1_0500t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mbt4y")
autoplay = "default"
frame_progress = 0.849123
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vq5io")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.59, 0.245833, 0, 1)
texture = ExtResource("3_1tb4y")
texture_scale = 0.15

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_55lql")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(97, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-94, 0)

[node name="idle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x3b75")
volume_db = -2.0

[node name="detect_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lo5tt")
volume_db = -2.0
pitch_scale = 0.34
